--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ig-feed": "^1.7.0",
+    "react-instagram-embed": "^3.0.0",
+    "react-instagram-feed": "^0.1.3-alpha",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-social-media-embed": "^2.3.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
