--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.6",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.4.0",
     "html-to-react": "^1.6.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
