--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "html-to-react": "^1.6.0",
     "lightgallery": "^2.7.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-ig-feed": "^1.7.0",
     "react-instagram-embed": "^3.0.0",
@@ -29,6 +31,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-social-media-embed": "^2.3.5",
+    "reactstrap": "^9.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
