--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-ig-feed": "^1.7.0",
     "react-instagram-embed": "^3.0.0",
     "react-instagram-feed": "^0.1.3-alpha",
+    "react-loading-overlay-ts": "^1.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-social-media-embed": "^2.3.5",
+    "react-spinners": "^0.13.8",
     "reactstrap": "^9.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
