--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
+    "start-server": "PORT=80 react-scripts start",
+    "serve": "serve -l 80 -s build/",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
