--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.0",
     "html-to-react": "^1.6.0",
     "lightgallery": "^2.7.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -33,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-social-media-embed": "^2.3.5",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
