--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lightgallery": "^2.7.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "pdf-viewer-reactjs": "^2.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-instagram-embed": "^3.0.0",
     "react-instagram-feed": "^0.1.3-alpha",
     "react-loading-overlay-ts": "^1.0.5",
+    "react-pdf": "^7.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
@@ -65,5 +67,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/pdf-viewer-reactjs": "^2.2.2"
   }
 }
