--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-instagram-feed": "^0.1.3-alpha",
     "react-loading-overlay-ts": "^1.0.5",
     "react-pdf": "^7.2.0",
+    "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
